# bias_analytics

./: .gitignore  README.md  covariates.json  pyproject.toml
bias_analysis/: __init__.py  cli.py  cohort.py  contingency.py  io.py  logistic.py  metrics.py
tests/: test_contingency.py  test_logistic.py  test_metrics.py
