[project]
name = "bias_analysis"
version = "0.1.0"
description = "Bias metrics (odds ratio, rate ratio, relative risk) for CDC-ID cohorts + logistic regression scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "statsmodels>=0.14"
]

[project.scripts]
bias-analysis = "bias_analysis.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
